z-index in home hero fixed

--- a/src/styles/components/hero.css
+++ b/src/styles/components/hero.css
@@ -6,7 +6,7 @@
   border-radius: var(--border-l);
   overflow: hidden;
   display: flex;
-  z-index: 1;
+  /* z-index: 1; */
 }
 
 /* Imagen de fondo con filtro de desenfoque */
